--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>스튜던트 웹</title>
 </head>
 <body>
-
+	
+	<h1>학생웹</h1>
 </body>
 </html>
